--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -211,7 +211,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse1307" class="collapse show" aria-labelledby="heading1307" data-parent="#accordionExample">
+                                <div id="collapse1307" class="collapse" aria-labelledby="heading1307" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -314,13 +314,14 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2707" class="collapse" aria-labelledby="heading2707" data-parent="#accordionExample">
+                                <div id="collapse2707" class="collapse show" aria-labelledby="heading2707" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
@@ -328,7 +329,102 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                  <tr>
+                                                    <th scope="row">1</th>
+                                                    <td>115</td>
+                                                    <td>Modena Team</td>
+                                                    <td>Lorenzo Tommasini</td>
+                                                    <td>Giacomo Minniti</td>
+                                                    <td>Matteo Accorsi</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">2</th>
+                                                    <td>48</td>
+                                                    <td>Shqiptari 2.0</td>
+                                                    <td>Mattia Bissi</td>
+                                                    <td>Mattia Farina</td>
+                                                    <td>Giovanni Pascucci</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">3</th>
+                                                    <td>65</td>
+                                                    <td>Ajeje Brazorf</td>
+                                                    <td>Giovanni Santoni</td>
+                                                    <td>Ivan Farabegoli</td>
+                                                    <td>Lorenzo Foschini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">4</th>
+                                                    <td>90</td>
+                                                    <td>Fresh 3.0</td>
+                                                    <td>Luca Boscherini</td>
+                                                    <td>Lorenzo Perrone</td>
+                                                    <td>Filippo Evangelisti</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">5</th>
+                                                    <td>20</td>
+                                                    <td>I senza nome</td>
+                                                    <td>Diego Frascio</td>
+                                                    <td>Nicola Fucksia</td>
+                                                    <td>Lorenzo Rossetti</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">6</th>
+                                                    <td>0</td>
+                                                    <td>Patetiche</td>
+                                                    <td>Sara Parmiani</td>
+                                                    <td>Mariarca Borrelli</td>
+                                                    <td>Ilaria Morini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">7</th>
+                                                    <td>32</td>
+                                                    <td>Noi andiamo a zappare</td>
+                                                    <td>Nicolò Baldrati</td>
+                                                    <td>Nicolò Selleghini</td>
+                                                    <td>Matteo Ortelli</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">8</th>
+                                                    <td>30</td>
+                                                    <td>Ristorante la marmotta strabica</td>
+                                                    <td>Federico Rossi</td>
+                                                    <td>Sirio Zannoni</td>
+                                                    <td>Francesco Zannoni</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">9</th>
+                                                    <td>24</td>
+                                                    <td>Pdor</td>
+                                                    <td>Filippo Capucci</td>
+                                                    <td>Federico Cottignoli</td>
+                                                    <td>Mattia Roselli</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">10</th>
+                                                    <td>9</td>
+                                                    <td>Boh</td>
+                                                    <td>Walter Fabbri</td>
+                                                    <td>Gaetano Aiello</td>
+                                                    <td>Tommaso Strani</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">11</th>
+                                                    <td>3</td>
+                                                    <td>The Ravens</td>
+                                                    <td>Lorenzo Pollini</td>
+                                                    <td>Bernardo Natali</td>
+                                                    <td>Jacopo Bandini</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <th scope="row">12</th>
+                                                    <td>24</td>
+                                                    <td>I fenicotteri rosa</td>
+                                                    <td>Elia Cialdini</td>
+                                                    <td>Giacomo Spaggiari</td>
+                                                    <td>Michele Gardini</td>
+                                                  </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -340,7 +436,7 @@
                                 <div class="card-header" id="heading1008">
                                     <h2 class="mb-0">
                                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1008" aria-expanded="true" aria-controls="collapse1008">
-                                            10 agosto
+                                            10 agosto • SKY
                                         </button>
                                     </h2>
                                 </div>
