--- a/app/classifica16.html
+++ b/app/classifica16.html
@@ -96,8 +96,16 @@
                                 </thead>
                                 <tbody>
                                     <tr class="premio">
-                                        <td>50</td>
+                                        <td>75</td>
                                         <td>Lorenzo Tommasini</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>70</td>
+                                        <td>Giacomo Minniti</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>65</td>
+                                        <td>Lorenzo Perrone</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>45</td>
@@ -105,35 +113,47 @@
                                     </tr>
                                     <tr class="premio">
                                         <td>45</td>
-                                        <td>Giacomo Minniti</td>
+                                        <td>Matteo Accorsi</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>45</td>
                                         <td>Luca Boscherini</td>
                                     </tr>
-                                    <tr class="premio">
-                                        <td>45</td>
-                                        <td>Lorenzo Perrone</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>25</td>
+                                    <tr>
+                                        <td>40</td>
                                         <td>Ivan Farabegoli</td>
                                     </tr>
-                                    <tr class="premio">
-                                        <td>25</td>
+                                    <tr>
+                                        <td>40</td>
                                         <td>Lorenzo Foschini</td>
                                     </tr>
                                     <tr>
-                                        <td>24</td>
+                                        <td>36</td>
                                         <td>Mattia Bissi</td>
                                     </tr>
                                     <tr>
-                                        <td>24</td>
+                                        <td>36</td>
                                         <td>Mattia Farina</td>
+                                    </tr>
+                                    <tr>
+                                        <td>30</td>
+                                        <td>Giovanni Santoni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>26</td>
+                                        <td>Michele Gardini</td>
                                     </tr>
                                     <tr>
                                         <td>24</td>
                                         <td>Niccolò Contu</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24</td>
+                                        <td>Nicolò Baldrati</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24</td>
+                                        <td>Diego Frascio</td>
                                     </tr>
                                     <tr>
                                         <td>20</td>
@@ -141,19 +161,27 @@
                                     </tr>
                                     <tr>
                                         <td>20</td>
-                                        <td>Matteo Accorsi</td>
+                                        <td>Filippo Evangelisti</td>
                                     </tr>
                                     <tr>
-                                        <td>18</td>
-                                        <td>Michele Gardini</td>
+                                        <td>20</td>
+                                        <td>Luca Falzaresi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Matteo Ortelli</td>
                                     </tr>
                                     <tr>
                                         <td>18</td>
                                         <td>Alberto Visani</td>
                                     </tr>
                                     <tr>
-                                        <td>18</td>
-                                        <td>Nicolò Baldrati</td>
+                                        <td>16</td>
+                                        <td>Nicola Fucksia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>16</td>
+                                        <td>Lorenzo Rossetti</td>
                                     </tr>
                                     <tr>
                                         <td>15</td>
@@ -168,16 +196,20 @@
                                         <td>Nicolò Zama</td>
                                     </tr>
                                     <tr>
-                                        <td>15</td>
-                                        <td>Giovanni Santoni</td>
+                                        <td>12</td>
+                                        <td>Giovanni Pascucci</td>
                                     </tr>
                                     <tr>
-                                        <td>14</td>
-                                        <td>Matteo Ortelli</td>
+                                        <td>12</td>
+                                        <td>Walter Fabbri</td>
                                     </tr>
                                     <tr>
-                                        <td>14</td>
-                                        <td>Diego Frascio</td>
+                                        <td>12</td>
+                                        <td>Elia Cialdini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Giacomo Spaggiari</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
@@ -189,39 +221,39 @@
                                     </tr>
                                     <tr>
                                         <td>8</td>
-                                        <td>Walter Fabbri</td>
+                                        <td>Gaetano Aiello</td>
                                     </tr>
                                     <tr>
-                                        <td>8</td>
-                                        <td>Gaetano Aiello</td>
+                                        <td>6</td>
+                                        <td>Nicolò Selleghini</td>
                                     </tr>
                                     <tr>
                                         <td>6</td>
                                         <td>Samuele Candito</td>
                                     </tr>
                                     <tr>
-                                        <td>6</td>
-                                        <td>Nicola Fucksia</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6</td>
-                                        <td>Lorenzo Rossetti</td>
-                                    </tr>
-                                    <tr>
                                         <td>4</td>
                                         <td>Filippo Capucci</td>
                                     </tr>
                                     <tr>
-                                        <td>4</td>
-                                        <td>Elia Cialdini</td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Giacomo Spaggiari</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
+                                        <td>5</td>
                                         <td>Glenn Ferrari</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Tommaso Strani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Lorenzo Pollini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Jacopo Bandini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Bernardo Natali</td>
                                     </tr>
                                     <tr>
                                         <td>1</td>
@@ -233,15 +265,15 @@
                                     </tr>
                                     <tr>
                                         <td>1</td>
-                                        <td>Lorenzo Pollini</td>
+                                        <td>Sara Parmiani</td>
                                     </tr>
                                     <tr>
                                         <td>1</td>
-                                        <td>Jacopo Bandini</td>
+                                        <td>Mariarca Borrelli</td>
                                     </tr>
                                     <tr>
                                         <td>1</td>
-                                        <td>Bernardo Natali</td>
+                                        <td>Ilaria Morini</td>
                                     </tr>
                                 </tbody>
                             </table>
