--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -314,7 +314,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2707" class="collapse show" aria-labelledby="heading2707" data-parent="#accordionExample">
+                                <div id="collapse2707" class="collapse" aria-labelledby="heading2707" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -441,13 +441,14 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse1008" class="collapse" aria-labelledby="heading1008" data-parent="#accordionExample">
+                                <div id="collapse1008" class="collapse show" aria-labelledby="heading1008" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
@@ -455,7 +456,46 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Lorenzo Monti</td>
+                                                      <td>Mattia Orioli</td>
+                                                      <td>Lorenzo Perrone</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Lorenzo Tommasini</td>
+                                                      <td>Matteo Accorsi</td>
+                                                      <td>Samuele Odorici</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Giacomo Minniti</td>
+                                                      <td>Luca Falzaresi</td>
+                                                      <td>Giovanni Pascucci</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">4</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Mattia Bissi</td>
+                                                      <td>Mattia Farina</td>
+                                                      <td>Niccolò Contu</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">5</th>
+                                                      <td></td>
+                                                      <td></td>
+                                                      <td>Matteo Ventisette</td>
+                                                      <td>Lorenzo Tuccelli</td>
+                                                      <td>Walter Fabbri</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
