--- a/app/classifica.html
+++ b/app/classifica.html
@@ -101,28 +101,40 @@
                                 </thead>
                                 <tbody>
                                     <tr class="premio">
-                                        <td>57</td>
+                                        <td>82</td>
                                         <td>Patrick Bandini</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>57</td>
+                                        <td>82</td>
                                         <td>Lorenzo Grottoli</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>52</td>
+                                        <td>72</td>
                                         <td>Filippo Sampaoli</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>40</td>
-                                        <td>Matteo Pirazzoli</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>40</td>
+                                        <td>60</td>
                                         <td>Filippo Rontini</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>32</td>
+                                        <td>57</td>
                                         <td>Riccardo Cardia</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>50</td>
+                                        <td>Matteo Bologna</td>
+                                    </tr>
+                                    <tr>
+                                        <td>40</td>
+                                        <td>Matteo Pirazzoli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>35</td>
+                                        <td>Federico Errani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>31</td>
+                                        <td>Luca Poletti</td>
                                     </tr>
                                     <tr>
                                         <td>31</td>
@@ -130,11 +142,11 @@
                                     </tr>
                                     <tr>
                                         <td>30</td>
-                                        <td>Matteo Bologna</td>
+                                        <td>Patrick Martini</td>
                                     </tr>
                                     <tr>
-                                        <td>30</td>
-                                        <td>Patrick Martini</td>
+                                        <td>27</td>
+                                        <td>Mattia Orioli</td>
                                     </tr>
                                     <tr>
                                         <td>25</td>
@@ -170,19 +182,31 @@
                                     </tr>
                                     <tr>
                                         <td>20</td>
-                                        <td>Federico Errani</td>
+                                        <td>Giovanni Natali</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Christian Zulli</td>
                                     </tr>
                                     <tr>
                                         <td>19</td>
-                                        <td>Luca Poletti</td>
+                                        <td>Matteo Camerani</td>
                                     </tr>
                                     <tr>
                                         <td>18</td>
                                         <td>Marco Sternini</td>
                                     </tr>
                                     <tr>
-                                        <td>15</td>
-                                        <td>Mattia Orioli</td>
+                                        <td>18</td>
+                                        <td>Lorenzo Tommasini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>16</td>
+                                        <td>Lorenzo Monti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>16</td>
+                                        <td>Giovanni Santoni</td>
                                     </tr>
                                     <tr>
                                         <td>15</td>
@@ -203,6 +227,10 @@
                                     <tr>
                                         <td>15</td>
                                         <td>Giacomo Silvagni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>14</td>
+                                        <td>Alex Poletti</td>
                                     </tr>
                                     <tr>
                                         <td>12</td>
@@ -241,16 +269,16 @@
                                         <td>Gianluca Garelli</td>
                                     </tr>
                                     <tr>
-                                        <td>10</td>
-                                        <td>Lorenzo Tommasini</td>
-                                    </tr>
-                                    <tr>
                                         <td>9</td>
                                         <td>Alessandro Mancini</td>
                                     </tr>
                                     <tr>
-                                        <td>9</td>
-                                        <td>Matteo Camerani</td>
+                                        <td>8</td>
+                                        <td>Filippo Brunelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Matteo Basini</td>
                                     </tr>
                                     <tr>
                                         <td>8</td>
@@ -282,10 +310,6 @@
                                     </tr>
                                     <tr>
                                         <td>6</td>
-                                        <td>Giovanni Santoni</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6</td>
                                         <td>Dario Bezzi</td>
                                     </tr>
                                     <tr>
@@ -307,14 +331,6 @@
                                     <tr>
                                         <td>4</td>
                                         <td>Michele Gardini</td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Alex Poletti</td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Lorenzo Monti</td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
@@ -358,12 +374,16 @@
                                 </thead>
                                 <tbody>
                                     <tr class="premio">
-                                        <td>45</td>
+                                        <td>65</td>
                                         <td>Greta Galeati</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>45</td>
                                         <td>Michela Alfieri</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>40</td>
+                                        <td>Camilla Orlandini</td>
                                     </tr>
                                     <tr class="premio">
                                         <td>37</td>
@@ -377,9 +397,17 @@
                                         <td>35</td>
                                         <td>Alessia Carlini</td>
                                     </tr>
-                                    <tr class="premio">
+                                    <tr>
                                         <td>30</td>
                                         <td>Sonia Capriglia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Ilaria Bughignoli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Alice Tesanovic</td>
                                     </tr>
                                     <tr>
                                         <td>25</td>
@@ -414,8 +442,12 @@
                                         <td>Vania Baravelli</td>
                                     </tr>
                                     <tr>
-                                        <td>20</td>
-                                        <td>Camilla Orlandini</td>
+                                        <td>15</td>
+                                        <td>Chiara Poggi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Valentina Mazza</td>
                                     </tr>
                                     <tr>
                                         <td>15</td>
@@ -443,6 +475,14 @@
                                     </tr>
                                     <tr>
                                         <td>12</td>
+                                        <td>Chiara Drapelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Greta Monaco</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
                                         <td>Giorgia Sarasini</td>
                                     </tr>
                                     <tr>
@@ -452,6 +492,14 @@
                                     <tr>
                                         <td>12</td>
                                         <td>Claudia Pasini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Elisa Vitolo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Matilde Bissi</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
