--- a/app/iscrizioni.html
+++ b/app/iscrizioni.html
@@ -286,7 +286,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2107" class="collapse show" aria-labelledby="heading2107" data-parent="#accordionExample">
+                                <div id="collapse2107" class="collapse" aria-labelledby="heading2107" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -389,13 +389,14 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse408" class="collapse" aria-labelledby="heading408" data-parent="#accordionExample">
+                                <div id="collapse408" class="collapse show" aria-labelledby="heading408" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
@@ -403,7 +404,62 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td>146</td>
+                                                      <td>Spritzzanti</td>
+                                                      <td>Patrick Bandini</td>
+                                                      <td>Lorenzo Grottoli</td>
+                                                      <td>Riccardo Cardia</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td>20</td>
+                                                      <td></td>
+                                                      <td>Giovanni Natali</td>
+                                                      <td>Federico Errani</td>
+                                                      <td>Christian Zulli</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td>0</td>
+                                                      <td>Mazzo's team</td>
+                                                      <td>Matteo Mazzotti</td>
+                                                      <td>Michele Mazzotti</td>
+                                                      <td>Oscar Mazzotti</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">4</th>
+                                                      <td>8</td>
+                                                      <td></td>
+                                                      <td>Filippo Brunelli</td>
+                                                      <td>Lorenzo Tommasini</td>
+                                                      <td>Matteo Pasini</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">5</th>
+                                                      <td>122</td>
+                                                      <td>ITIoti</td>
+                                                      <td>Filippo Sampaoli</td>
+                                                      <td>Filippo Rontini</td>
+                                                      <td>Matteo Bologna</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">6</th>
+                                                      <td>38</td>
+                                                      <td></td>
+                                                      <td>Mattia Orioli</td>
+                                                      <td>Lorenzo Monti</td>
+                                                      <td>Luca Poletti</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">7</th>
+                                                      <td>21</td>
+                                                      <td></td>
+                                                      <td>Matteo Camerani</td>
+                                                      <td>Alex Poletti</td>
+                                                      <td>Giovanni Santoni</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -505,7 +561,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2107f" class="collapse show" aria-labelledby="heading2107f" data-parent="#accordionExample">
+                                <div id="collapse2107f" class="collapse" aria-labelledby="heading2107f" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -697,21 +753,41 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse408f" class="collapse" aria-labelledby="heading408f" data-parent="#accordionExample">
+                                <div id="collapse408f" class="collapse show" aria-labelledby="heading408f" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
-                                                        <th scope="col">3</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-
+                                                    <tr>
+                                                      <th scope="row">1</th>
+                                                      <td>0</td>
+                                                      <td>Drapelli-Monaco</td>
+                                                      <td>Chiara Drapelli</td>
+                                                      <td>Greta Monaco</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">2</th>
+                                                      <td>0</td>
+                                                      <td>Bughignoli-Tesanovic</td>
+                                                      <td>Ilaria Bughignoli</td>
+                                                      <td>Alice Tesanovic</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <th scope="row">3</th>
+                                                      <td>0</td>
+                                                      <td>Vitolo-Bissi</td>
+                                                      <td>Elisa Vitolo</td>
+                                                      <td>Matilde Bissi</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
